# yolov7

./: detect.py  json2txt.py
Tensorrt_infer/: CMakeLists.txt  Logger.cpp  Logger.h  YOLOv7Inference.cpp  YOLOv7Inference.h  main.cpp
data/: data.yaml  data_SB2.yaml  test.yaml
utils/: plots.py
